use the font-size:0 trick to fix the whitespace caused by the inline blocks inside rr-multislider-grid

--- a/src/ng-weekly-scheduler.less
+++ b/src/ng-weekly-scheduler.less
@@ -364,6 +364,7 @@ br-multi-slider {
 }
 
 rr-multislider-grid {
+  font-size: 0; // inline-block fix
   display: block;
   width: 100%;
   height: 100%;
